# ai-work-journal

./: .gitignore  README.md  pyproject.toml
devlog/: cli.py  config.py  engine.py  events.py  html_report.py  ingest.py  report.py  state.py  store.py
devlog/parsers/: claude.py  codex.py  gitlog.py
devlog/tests/: test_claude.py  test_cli.py  test_codex.py  test_config.py  test_engine.py  test_events.py  test_gitlog.py  test_html_report.py  test_ingest.py  test_report.py  test_state.py  test_store.py
docs/: SESSION_SUMMARY.md  STATUS.md  index.html
docs/superpowers/plans/: 2026-06-18-devlog-v1.md
docs/superpowers/specs/: 2026-06-18-devlog-work-journal-design.md
