[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-work-journal"
version = "1.0.0"
description = "Self-writing AI work journal — unifies Claude Code, Codex, and git history"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
devlog = "devlog.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["devlog*"]
